welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:19: error: ')' expected but '}' found.
		}
                ^